# akonadi-exchange

./: AUTHOR  CMakeLists.txt  README
calendar/: CMakeLists.txt  excalresource.cpp  excalresource.desktop  excalresource.h  settings.kcfgc
cmake/modules/: FindLibMapi.cmake
connector/: mapiconnector2.cpp  mapiconnector2.h  mapiobjects.cpp  mapiobjects.h  mapiresource.cpp  mapiresource.h
contacts/: CMakeLists.txt  exgalresource.cpp  exgalresource.desktop  exgalresource.h  exgalresource.kcfg  settings.kcfgc
mail/: CMakeLists.txt  exmailresource.cpp  exmailresource.desktop  exmailresource.h  settings.kcfgc
mapibrowser/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapibrowser.cpp  mapibrowser.h
ui/: changepassworddialog.cpp  changepassworddialog.h  changepassworddialog.ui  createprofiledialog.cpp  createprofiledialog.h  createprofiledialog.ui  modifyprofiledialog.cpp  modifyprofiledialog.h  modifyprofiledialog.ui  profiledialog.cpp  profiledialog.h  profiledialog.ui
